# medicore

./: .env.example  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  requirements.txt
backend/: .coverage  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml  pytest.ini  setup.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: .gitkeep  2025_10_05_1922-848cacde6ec0_create_initial_tables.py  2025_10_06_1831-8099342bea2a_add_dicomstudy_model.py  2025_10_07_0942-ca977cf97fe3_add_quality_metrics_and_processing_.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/: api-overview.md  router.py
backend/app/core/: encryption.py  exceptions.py  permissions.py  security.py  utils.py  validators.py
backend/app/middleware/: __init__.py  auth.py  cors.py  logging.py  rate_limiting.py
backend/app/models/database/: __init__.py  audit.py  patient.py  study.py  user.py
backend/app/models/schemas/: study.py
backend/app/services/dicom/: converter.py  parser.py  processor.py  quality.py  validator.py
backend/app/services/storage/: s3_client.py
backend/app/workers/: celery_app.py
backend/app/workers/tasks/: __init__.py  diagnostic.py
backend/medicore.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
backend/requirements/: base.txt  development.txt
backend/tests/: conftest.py  test_path.py
backend/tests/integration/: test_async_processing.py  test_study_upload.py
backend/tests/unit/: test_dicom_parser.py  test_quality_assessment.py  test_security.py
scripts/: docker-entrypoint.sh
(+1 files in other folders)
